@@ -1,3 +1,8 @@
+2008-09-25  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpAmbience.cs: fixed 'Bug 424499 - Member list should display
+	  normal members and explicitly implemented members differently'.
+
 2008-09-24  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* Parser/NRefactoryParser.cs: Fix line/column of errors.
